--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-Review.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-Review.yml
@@ -27,7 +27,7 @@ notes:
       plt.rc('font', family = 'serif')
 
       x = sy.symbols('x')
-      def f(x): return 5*sy.sin(1/8*sy.pi*x)
+      def f(x): return 4*sy.sin(1/8*sy.pi*x)
       p = sy.plot(
         (f(x), (x, -6, 6)),
         xlim = (-9, 9), ylim = (-6, 6),
@@ -49,7 +49,9 @@ notes:
       $$
       2.7
       $$
-    Annotations: ''
+    Annotations: Fix me:<div>- The plot is too tall. It should have a max of 4.</div>
+  tags:
+  - ann:fix-me
 - id: 1543449293019
   useMarkdown: pweave
   fields:
@@ -67,7 +69,7 @@ notes:
       plt.rc('font', family = 'serif')
 
       x = sy.symbols('x')
-      def f(x): return 5*sy.sin(1/8*sy.pi*x)
+      def f(x): return 4*sy.sin(1/8*sy.pi*x)
       p = sy.plot(
         (f(x), (x, -6, 6)),
         xlim = (-9, 9), ylim = (-6, 6),
@@ -90,6 +92,7 @@ notes:
       2.3, \ 5.6
       $$
     Annotations: ''
+  tags: []
 - id: 1543449296598
   useMarkdown: pweave
   fields:
@@ -107,7 +110,7 @@ notes:
       plt.rc('font', family = 'serif')
 
       x = sy.symbols('x')
-      def f(x): return 5*sy.sin(1/8*sy.pi*x)
+      def f(x): return 4*sy.sin(1/8*sy.pi*x)
       p = sy.plot(
         (f(x), (x, -6, 6)),
         xlim = (-9, 9), ylim = (-6, 6),
@@ -130,6 +133,7 @@ notes:
       [-6,6]
       $$
     Annotations: ''
+  tags: []
 - id: 1543449300119
   useMarkdown: pweave
   fields:
@@ -147,7 +151,7 @@ notes:
       plt.rc('font', family = 'serif')
 
       x = sy.symbols('x')
-      def f(x): return 5*sy.sin(1/8*sy.pi*x)
+      def f(x): return 4*sy.sin(1/8*sy.pi*x)
       p = sy.plot(
         (f(x), (x, -6, 6)),
         xlim = (-9, 9), ylim = (-6, 6),
@@ -170,6 +174,7 @@ notes:
       [-4,4]
       $$
     Annotations: ''
+  tags: []
 - id: 1543449303769
   useMarkdown: pweave
   fields:
@@ -187,7 +192,7 @@ notes:
       plt.rc('font', family = 'serif')
 
       x = sy.symbols('x')
-      def f(x): return 5*sy.sin(1/8*sy.pi*x)
+      def f(x): return 4*sy.sin(1/8*sy.pi*x)
       p = sy.plot(
         (f(x), (x, -6, 6)),
         xlim = (-9, 9), ylim = (-6, 6),
@@ -210,6 +215,7 @@ notes:
       [-4,4]
       $$
     Annotations: ''
+  tags: []
 - id: 1543449307470
   useMarkdown: pweave
   fields:
@@ -227,7 +233,7 @@ notes:
       plt.rc('font', family = 'serif')
 
       x = sy.symbols('x')
-      def f(x): return 5*sy.sin(1/8*sy.pi*x)
+      def f(x): return 4*sy.sin(1/8*sy.pi*x)
       p = sy.plot(
         (f(x), (x, -6, 6)),
         xlim = (-9, 9), ylim = (-6, 6),
@@ -248,6 +254,7 @@ notes:
     Back: |
       No; it fails the Horizontal Line Test.
     Annotations: ''
+  tags: []
 - id: 1543449311123
   useMarkdown: pweave
   fields:
@@ -265,7 +272,7 @@ notes:
       plt.rc('font', family = 'serif')
 
       x = sy.symbols('x')
-      def f(x): return 5*sy.sin(1/8*sy.pi*x)
+      def f(x): return 4*sy.sin(1/8*sy.pi*x)
       p = sy.plot(
         (f(x), (x, -6, 6)),
         xlim = (-9, 9), ylim = (-6, 6),
@@ -286,6 +293,7 @@ notes:
     Back: |
       Odd; its graph is symmetric about the origin.
     Annotations: ''
+  tags: []
 - id: 1543450755145
   fields:
     Front: |
