--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/A.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/A.yml
@@ -8,3 +8,12 @@ defaults:
   - Calculus
   - Calculus-ConceptsAndContexts
   - CCAC-A-IntervalsInequalitiesAndAbsoluteValues
+notes:
+- id: 1545601277658
+  tags: []
+  fields:
+    Front: |
+      CCAC A 01: Rewrite $|5-23|$ without using the absolute value symbol.
+    Back: |
+      $18$.
+    Annotations: ''
