--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/A.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/A.yml
@@ -55,3 +55,28 @@ notes:
     Back: |
       $x^2 + 1$.
     Annotations: ''
+- id: 1545601278310
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC A 11: Solve the inequality $2x+7>3$ in terms of intervals, and illustrate the solution set on the real nuumber line.
+    Back: |
+      $(-2, \infty)$
+      ```{python echo = False}
+      import matplotlib.pyplot as plt
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      fig = plt.figure(num = 1, figsize = (4, 0.5))
+      ax = plt.axes(frameon = False)
+      plt.xlim(-3.5, 3.5)
+      ax.axes.get_yaxis().set_visible(False)
+      ax.axes.get_xaxis().set_ticks([-2, 0])
+      ax.arrow(-3, 0, 6, 0, head_length = 0.20, head_width = 0.015, linewidth = 0.1, color = 'k')
+      ax.arrow(-2, 0, 5, 0, head_length = 0.20, head_width = 0.015, color = 'k')
+      ax.plot(-2, 0, 'ko', markerfacecolor = 'white', markersize = 4)
+      _=_
+      ```
+    Annotations: ''
+  tags: []
