--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/A.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/A.yml
@@ -105,3 +105,29 @@ notes:
       ```
     Annotations: ''
   tags: []
+- id: 1545601278558
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC A 15: Solve the inequality $0 \le 1-x < 1$ in terms of intervals, and illustrate the solution set on the real nuumber line.
+    Back: |
+      $(0, 1]$
+      ```{python echo = False}
+      import matplotlib.pyplot as plt
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      fig = plt.figure(num = 1, figsize = (4, 0.5))
+      ax = plt.axes(frameon = False)
+      plt.xlim(-3.5, 3.5)
+      ax.axes.get_yaxis().set_visible(False)
+      ax.axes.get_xaxis().set_ticks([0, 1])
+      ax.arrow(-3, 0, 6, 0, head_length = 0.20, head_width = 0.015, linewidth = 0.1, color = 'k')
+      plt.plot((0, 1), (0, 0), color = 'k')
+      ax.plot(0, 0, 'ko', markerfacecolor = 'white', markersize = 4)
+      ax.plot(1, 0, 'ko', markersize = 4)
+      _=_
+      ```
+    Annotations: ''
+  tags: []
