--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/A.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/A.yml
@@ -131,3 +131,30 @@ notes:
       ```
     Annotations: ''
   tags: []
+- id: 1545601278686
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC A 17: Solve the inequality $0 \le 1-x < 1$ in terms of intervals, and illustrate the solution set on the real nuumber line.
+    Back: |
+      $(-\infty, 1) \cup (2, \infty)$
+      ```{python echo = False}
+      import matplotlib.pyplot as plt
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      fig = plt.figure(num = 1, figsize = (4, 0.5))
+      ax = plt.axes(frameon = False)
+      plt.xlim(-2.5, 4.5)
+      ax.axes.get_yaxis().set_visible(False)
+      ax.axes.get_xaxis().set_ticks([1, 2])
+      ax.arrow(-2, 0, 6, 0, head_length = 0.20, head_width = 0.015, linewidth = 0.1, color = 'k')
+      ax.arrow(2, 0, 2, 0, head_length = 0.20, head_width = 0.015, color = 'k')
+      plt.plot((-2, 1), (0, 0), color = 'k')
+      ax.plot(1, 0, 'ko', markerfacecolor = 'white', markersize = 4)
+      ax.plot(2, 0, 'ko', markerfacecolor = 'white', markersize = 4)
+      _=_
+      ```
+    Annotations: ''
+  tags: []
