--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/A.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/A.yml
@@ -322,3 +322,11 @@ notes:
       $(3, 5)$
     Annotations: ''
   tags: []
+- id: 1545601280034
+  fields:
+    Front: |
+      CCAC A 37: Solve the inequality $|x+5| \ge 2$.
+    Back: |
+      $(-\infty, -7] \cup [-3, \infty)$
+    Annotations: ''
+  tags: []
