--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/A.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/A.yml
@@ -330,3 +330,11 @@ notes:
       $(-\infty, -7] \cup [-3, \infty)$
     Annotations: ''
   tags: []
+- id: 1545601280158
+  fields:
+    Front: |
+      CCAC A 39: Solve the inequality $|2x-3| \le 0.4$.
+    Back: |
+      $[1.3, 1.7]$
+    Annotations: ''
+  tags: []
