--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/B.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/B.yml
@@ -16,3 +16,10 @@ notes:
     Back: |
       5
     Annotations: ''
+- id: 1545610725541
+  fields:
+    Front: |
+      CCAC B 03: Find the slope of the line through $P(-3, 3)$ and $Q(-1, -6)$.
+    Back: |
+      $-\frac{9}{2}$
+    Annotations: ''
