--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/B.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/B.yml
@@ -169,3 +169,29 @@ notes:
       ```
     Annotations: ''
   tags: []
+- id: 1545610727818
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC B 27: Find the slope and $y$-intercept of the line, and draw its graph.
+      $$
+      3x - 4y = 12
+      $$
+    Back: |
+      $m = \frac{3}{4}$, $b = -3$
+      ```{python echo = False}
+      import sympy as sy
+      import matplotlib.pyplot as plt
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      x = sy.symbols('x')
+      p = sy.plot(
+        3*x/4 - 3,
+        xlim = (-2, 7), ylim = (-4, 2),
+        xlabel = '$x$', ylabel = '$y$',
+      )
+      ```
+    Annotations: ''
+  tags: []
